# ComfyUI_CFGStar

./: __init__.py  cfgstar.py  pyproject.toml
